kyc-vault/infra/k8s/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kyc-vault
  labels:
    name: kyc-vault
