kyc-vault/infra/k8s/07-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kyc-vault-network-policy
  namespace: kyc-vault
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: kyc-vault
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: kyc-vault
  - to:
    - namespaceSelector: {}
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
